@@ -7,6 +7,8 @@ version 2026a, in progress
   rank sum test
 - "print" command: add --head (-h) and --tail (-t) options
   as convenience abbreviations for --range
+- "gnuplot" command, --y2axis option: accept a named list
+  as parameter, or comma-separated series
 
 2025-11-12 version 2025c
 - new (block) command, "gibbs", implements the Gibbs sampler
